zokrates_cli/examples/compile_errors/double_negation.zok
def main() {
    field a = - - 1;
    return;
}
